fixed overflow code quote

--- a/docs/style.css
+++ b/docs/style.css
@@ -59,9 +59,14 @@ pre.prettyprint {
 	border-left: 1px solid #3f51b5 !important;
 }
 .container{
+	
+}
+.code{
 	overflow: hidden;
 }
 footer{
 	padding-bottom: 5rem !important;
-
+}
+.hr-divider > span {
+    padding-top: 26px;
 }
